# ai-assistant

./: .gitignore  README.md  TODO.md  decisions.md  deployment-log.md  project-status.md  test-signoff.md  workflow-state.md
.claude/: settings.json
.claude/hooks/: branch-policy.sh
.github/workflows/: auto-fmt.yml  ci.yml  deploy-dev.yml  deploy-staging.yml
.project/: deployment-log.md  test-signoff.md
backend/: README.md  pyproject.toml
backend/src/assistant_app/: __init__.py  bedrock_client.py  config.py  consent.py  dev_store.py  handler.py  http_client.py  intent.py  live_service.py  models.py  orchestrator.py  registry.py  response.py  secrets_manager.py  tool_definitions.py  tool_handlers.py
backend/src/assistant_app/providers/: __init__.py  google_calendar.py  google_drive.py  google_tasks.py  microsoft_calendar.py  microsoft_todo.py  plaid.py
backend/tests/: __init__.py  test_agent_turns.py  test_bedrock_client.py  test_config.py  test_consent.py  test_dev_store.py  test_handler.py  test_http_client.py  test_live_service.py  test_oauth.py  test_orchestrator.py  test_orchestrator_extra.py  test_prompt_regression.py  test_providers.py  test_tool_definitions.py  test_tool_handlers.py
backend/tests/fixtures/: google_calendar_event.json  google_drive_file.json  google_task.json  microsoft_event.json  microsoft_todo.json  plaid_account.json
docs/: assistant-mvp-spec.md
init/: 00-overview.md  01-prerequisites.md  02-local-backend-setup.md  03-local-mobile-setup.md  04-environment-config.md  05-provider-auth.md  06-running-tests.md  07-terraform-setup.md  08-aws-deployment.md  09-ci-cd.md
mobile/: .env  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: ActionProposalCard.test.tsx  ChatScreen.test.tsx  SignInScreen.test.tsx  auth.test.ts  redirectUri.config.test.ts
mobile/src/: types.ts
mobile/src/components/: ActionProposalCard.tsx
mobile/src/lib/: api.ts  auth.ts
mobile/src/screens/: ChatScreen.tsx  SignInScreen.tsx
scripts/: package-lambda.ps1  run-backend-tests.ps1  run-local-server.ps1  start-provider-auth.ps1  test-integrations.ps1  validate-terraform.ps1
terraform/: README.md
terraform/bootstrap/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: backend.hcl  dynamodb.tf  (+6 more)
(+42 files in other folders)
