[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-app"
version = "0.1.0"
description = "AWS Lambda backend scaffold for the AI assistant MVP"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "boto3",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B904",  # raise-without-from-inside-except (pattern used in http_client)
    "UP017", # datetime.UTC requires Python 3.11+; we need 3.10 compatibility for development
]

[tool.ruff.lint.isort]
known-first-party = ["assistant_app"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]
